--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Book Store</title>
+    <meta name="shourovr82" content="shourovr82, book-store-shourovr82">
   </head>
   <body>
     <div id="root"></div>
